[package]
name = "staking-rs"
version = "0.0.1"
authors = ["zTgx <747674262@qq.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/zTgx/staking"
categories = ["cryptography"]
keywords = ["cryptography", "staking"]
description = "A pure-Rust implementation of staking"
edition = "2018"

[dependencies]
bytes = "1.1.0"
log = "0.4.8"